# krddevquizbot

./: .env.example  .gitignore  README.md  krddevquizbot.service  pyproject.toml
krddevquizbot/: __main__.py  questions.py
